# LRU-cache

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  readme.md  sanbox.c
include/: hashmap.h  linked_list.h  lru_cashe.h
src/: hashmap.c  linked_list.c  lru_cache.c
tests/: test_hashmap.c  test_linked_list.c  test_lru_cache.c
